lib/broadcaster/manifests/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: broadcaster-statefulset
spec:
  serviceName: broadcaster-clusterip
  replicas: 6
  selector:
    matchLabels:
      app: broadcaster
  template:
    metadata:
      labels:
        app: broadcaster
    spec:
      containers:
        - name: broadcaster-container
          image: PROJECT/IMAGE
          ports:
            - name: http
              containerPort: 4000
