lib/broadcaster/manifests/service-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: boradcaster-clusterip
spec:
  type: ClusterIP
  selector:
    app: broadcaster
  ports:
    - port: 80
      protocol: TCP
      targetPort: 4080
