lib/broadcaster/manifests/route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: broadcaster-route
spec:
  parentRefs:
  - name: broadcaster-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: broadcaster-clusterip
      port: 80
